--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "connect-ui-toolkit",
-  "version": "26.0.3",
+  "name": "@cloudblueconnect/connect-ui-toolkit",
+  "version": "26.0.4",
   "main": "dist/index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
