--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "webpack --config webpack.config.js",
     "start": "node tasks/start.js",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "test": "jest"
+    "test": "jest",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "vue": "^3.2.33",
@@ -15,6 +17,14 @@
   "devDependencies": {
     "@babel/core": "^7.18.0",
     "@babel/eslint-parser": "^7.18.2",
+    "@storybook/addon-actions": "^6.5.15",
+    "@storybook/addon-essentials": "^6.5.15",
+    "@storybook/addon-interactions": "^6.5.15",
+    "@storybook/addon-links": "^6.5.15",
+    "@storybook/builder-webpack5": "^6.5.15",
+    "@storybook/manager-webpack5": "^6.5.15",
+    "@storybook/testing-library": "^0.0.13",
+    "@storybook/vue3": "^6.5.15",
     "@vue/cli-plugin-babel": "^5.0.4",
     "@vue/vue3-jest": "^28.0.0",
     "babel-core": "^7.0.0-bridge.0",
@@ -23,6 +33,7 @@
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "css-loader": "^6.7.1",
     "eslint": "^8.5.0",
+    "eslint-plugin-storybook": "^0.6.8",
     "eslint-plugin-vue": "^8.2.0",
     "eslint-webpack-plugin": "^3.1.1",
     "jest": "^28.1.0",
@@ -30,6 +41,7 @@
     "jest-transform-stub": "^2.0.0",
     "pug-plain-loader": "^1.1.0",
     "style-loader": "^3.3.1",
+    "stylus": "^0.59.0",
     "stylus-loader": "^7.0.0",
     "vue-loader": "^17.0.0",
     "vue-style-loader": "^4.1.3",
