Added draft support for the storybook-addon-designs
In order to avoid copy-pasting content between our Figma specifications and Component documentation, created a link between them. Not ideal, because of an iframe experience, but should be good enough for now.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ coverage
 /cypress/videos/
 /cypress/screenshots/
 
+/storybook-static
+yarn.lock
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
