--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jest-environment-jsdom": "^28.1.0",
     "jest-transform-stub": "^2.0.0",
     "pug-plain-loader": "^1.1.0",
+    "storybook-addon-designs": "^6.3.1",
     "style-loader": "^3.3.1",
     "stylus": "^0.59.0",
     "stylus-loader": "^7.0.0",
