Added minimalistic support for the CloudBlue brand
Logo, title and base URL are now pointing to CloudBlue.

--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@storybook/addon-essentials": "^6.5.15",
     "@storybook/addon-interactions": "^6.5.15",
     "@storybook/addon-links": "^6.5.15",
+    "@storybook/addons": "^6.5.15",
     "@storybook/builder-webpack5": "^6.5.15",
     "@storybook/manager-webpack5": "^6.5.15",
     "@storybook/testing-library": "^0.0.13",
+    "@storybook/theming": "^6.5.15",
     "@storybook/vue3": "^6.5.15",
     "@vue/cli-plugin-babel": "^5.0.4",
     "@vue/vue3-jest": "^28.0.0",
