--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "object-hash": "^3.0.0",
-    "vue": "^3.2.33"
+    "vue": "^3.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.18.0",
@@ -42,6 +42,7 @@
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "jest-transform-stub": "^2.0.0",
+    "mitt": "^3.0.1",
     "pug-plain-loader": "^1.1.0",
     "storybook-addon-designs": "^6.3.1",
     "style-loader": "^3.3.1",
