--- a/package.json
+++ b/package.json
@@ -5,54 +5,56 @@
   "scripts": {
     "build": "NODE_ENV=production webpack --config webpack.config.js",
     "start": "NODE_ENV=development node tasks/start.js",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "lint": "eslint src --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
     "test": "NODE_ENV=test jest",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "object-hash": "^3.0.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.0",
-    "@babel/eslint-parser": "^7.18.2",
-    "@storybook/addon-actions": "^6.5.15",
-    "@storybook/addon-essentials": "^6.5.15",
-    "@storybook/addon-interactions": "^6.5.15",
-    "@storybook/addon-links": "^6.5.15",
-    "@storybook/addons": "^6.5.15",
-    "@storybook/builder-webpack5": "^6.5.15",
-    "@storybook/manager-webpack5": "^6.5.15",
-    "@storybook/testing-library": "^0.0.13",
-    "@storybook/theming": "^6.5.15",
-    "@storybook/vue3": "^6.5.15",
-    "@vue/cli-plugin-babel": "^5.0.4",
-    "@vue/vue3-jest": "^28.0.0",
+    "@babel/core": "^7.23.0",
+    "@babel/eslint-parser": "^7.22.15",
+    "@storybook/addon-actions": "^7.4.5",
+    "@storybook/addon-designs": "^7.0.5",
+    "@storybook/addon-essentials": "^7.4.5",
+    "@storybook/addon-interactions": "^7.4.5",
+    "@storybook/addon-links": "^7.4.5",
+    "@storybook/addons": "^7.4.5",
+    "@storybook/testing-library": "^0.2.1",
+    "@storybook/theming": "^7.4.5",
+    "@storybook/vue3": "^7.4.5",
+    "@storybook/vue3-webpack5": "^7.4.5",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/vue3-jest": "^29.2.6",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^28.1.0",
-    "babel-loader": "^8.2.5",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
     "babel-plugin-dynamic-import-node": "^2.3.3",
-    "chromatic": "^7.1.0",
-    "css-loader": "^6.7.1",
-    "eslint": "^8.5.0",
-    "eslint-plugin-storybook": "^0.6.8",
-    "eslint-plugin-vue": "^8.2.0",
-    "eslint-webpack-plugin": "^3.1.1",
-    "jest": "^28.1.0",
-    "jest-environment-jsdom": "^28.1.0",
+    "chromatic": "^7.2.0",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.50.0",
+    "eslint-plugin-storybook": "^0.6.14",
+    "eslint-plugin-vue": "^9.17.0",
+    "eslint-webpack-plugin": "^4.0.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-transform-stub": "^2.0.0",
     "mitt": "^3.0.1",
     "pug-plain-loader": "^1.1.0",
-    "storybook-addon-designs": "^6.3.1",
-    "style-loader": "^3.3.1",
-    "stylus": "^0.59.0",
-    "stylus-loader": "^7.0.0",
-    "vue-loader": "^17.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "storybook": "^7.4.5",
+    "style-loader": "^3.3.3",
+    "stylus": "^0.60.0",
+    "stylus-loader": "^7.1.3",
+    "vue-loader": "^17.2.2",
     "vue-style-loader": "^4.1.3",
-    "vue-template-compiler": "^2.6.14",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.1"
+    "vue-template-compiler": "^2.7.14",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
