--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@cloudblueconnect/material-svg": "^1.0.35",
     "object-hash": "^3.0.0",
     "vue": "^3.3.4"
   },
@@ -51,6 +52,9 @@
     "stylus": "^0.60.0",
     "stylus-loader": "^7.1.3",
     "vue-loader": "^17.2.2",
+    "storybook-addon-designs": "^6.3.1",
+    "storybook-vue-addon": "^0.4.0",
+    "svgo-loader": "^4.0.0",
     "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.7.14",
     "webpack": "^5.88.2",
