--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@cloudblueconnect/material-svg": "^1.0.35",
     "object-hash": "^3.0.0",
     "vue": "^3.3.4"
   },
@@ -43,13 +44,15 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-transform-stub": "^2.0.0",
     "mitt": "^3.0.1",
-    "pug-plain-loader": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.4.5",
+    "storybook-addon-vue-mdx": "^0.1.5",
+    "storybook-vue-addon": "^0.4.0",
     "style-loader": "^3.3.3",
     "stylus": "^0.60.0",
     "stylus-loader": "^7.1.3",
+    "svgo-loader": "^4.0.0",
     "vue-loader": "^17.2.2",
     "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.7.14",
