--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@storybook/vue3-webpack5": "^7.4.5",
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/vue3-jest": "^29.2.6",
+    "ajv": "^8.12.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
