--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
   "name": "@cloudblueconnect/connect-ui-toolkit",
   "version": "30.1.0",
-  "main": "dist/index.js",
+  "exports": {
+    ".": "./dist/index.js"
+  },
   "scripts": {
-    "build": "NODE_ENV=production webpack --config webpack.config.js",
-    "start": "NODE_ENV=development node tasks/start.js",
-    "lint": "eslint src --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "test": "NODE_ENV=test jest",
+    "build": "NODE_ENV=production webpack --config ./webpack.config.js",
+    "start": "NODE_ENV=development node ./components/tasks/start.js",
+    "lint": "eslint ./components/src --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "test": "NODE_ENV=test jest --config ./components/jest.config.js",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@cloudblueconnect/material-svg": "^1.0.35",
-    "object-hash": "^3.0.0",
-    "vue": "^3.3.4"
+    "@cloudblueconnect/material-svg": "^1.0.42",
+    "mitt": "^3.0.1",
+    "vue": "^3.4.15"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.0",
-    "@babel/eslint-parser": "^7.22.15",
-    "@storybook/addon-actions": "^7.4.5",
-    "@storybook/addon-designs": "^7.0.5",
-    "@storybook/addon-essentials": "^7.4.5",
-    "@storybook/addon-interactions": "^7.4.5",
-    "@storybook/addon-links": "^7.4.5",
-    "@storybook/addons": "^7.4.5",
-    "@storybook/testing-library": "^0.2.1",
-    "@storybook/theming": "^7.4.5",
-    "@storybook/vue3": "^7.4.5",
-    "@storybook/vue3-webpack5": "^7.4.5",
+    "@babel/core": "^7.23.9",
+    "@babel/eslint-parser": "^7.23.10",
+    "@storybook/addon-actions": "^7.6.12",
+    "@storybook/addon-designs": "^7.0.9",
+    "@storybook/addon-essentials": "^7.6.12",
+    "@storybook/addon-interactions": "^7.6.12",
+    "@storybook/addon-links": "^7.6.12",
+    "@storybook/addons": "^7.6.12",
+    "@storybook/testing-library": "^0.2.2",
+    "@storybook/theming": "^7.6.12",
+    "@storybook/vue3": "^7.6.12",
+    "@storybook/vue3-webpack5": "^7.6.12",
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/vue3-jest": "^29.2.6",
     "ajv": "^8.12.0",
@@ -35,29 +37,27 @@
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
     "babel-plugin-dynamic-import-node": "^2.3.3",
-    "chromatic": "^7.2.0",
-    "css-loader": "^6.8.1",
-    "eslint": "^8.50.0",
-    "eslint-plugin-storybook": "^0.6.14",
-    "eslint-plugin-vue": "^9.17.0",
+    "chromatic": "^9.1.0",
+    "css-loader": "^6.10.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-storybook": "^0.6.15",
+    "eslint-plugin-vue": "^9.21.1",
     "eslint-webpack-plugin": "^4.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-transform-stub": "^2.0.0",
-    "mitt": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^7.4.5",
+    "storybook": "^7.6.12",
     "storybook-addon-vue-mdx": "^0.1.5",
     "storybook-vue-addon": "^0.4.0",
-    "style-loader": "^3.3.3",
-    "stylus": "^0.60.0",
-    "stylus-loader": "^7.1.3",
+    "style-loader": "^3.3.4",
+    "stylus": "^0.62.0",
+    "stylus-loader": "^8.1.0",
     "svgo-loader": "^4.0.0",
-    "vue-loader": "^17.2.2",
+    "vue-loader": "^17.4.2",
     "vue-style-loader": "^4.1.3",
-    "vue-template-compiler": "^2.7.14",
-    "webpack": "^5.88.2",
+    "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   }
