--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "start:https": "npm run start -- --server-type https",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --ignore-path .gitignore",
     "lint:fix": "npm run lint -- --fix",
+    "format": "prettier --write . --ignore-path .gitignore",
+    "format:check": "prettier --check . --ignore-path .gitignore",
     "test": "jest --config ./jest.config.js",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "dependencies": {
     "@cloudblueconnect/material-svg": "^1.0.42",
+    "@rushstack/eslint-patch": "^1.7.2",
+    "@vue/eslint-config-prettier": "^9.0.0",
     "mitt": "^3.0.1",
     "vue": "^3.4.15"
   },
@@ -47,6 +51,7 @@
     "chromatic": "^9.1.0",
     "css-loader": "^6.10.0",
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^27.6.3",
     "eslint-plugin-jest-formatting": "^3.1.0",
     "eslint-plugin-storybook": "^0.6.15",
@@ -55,6 +60,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-transform-stub": "^2.0.0",
+    "prettier": "3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.6.12",
