--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@cloudblueconnect/connect-ui-toolkit",
   "version": "31.1.0",
+  "type": "module",
   "exports": {
     ".": "./dist/index.js",
     "./tools/*": "./dist/tools/*"
@@ -25,9 +26,6 @@
     "vue": "^3.4.21"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "@babel/eslint-parser": "^7.23.10",
-    "@babel/preset-env": "^7.24.0",
     "@rushstack/eslint-patch": "^1.7.2",
     "@storybook/addon-actions": "^7.6.17",
     "@storybook/addon-designs": "^7.0.9",
@@ -39,15 +37,11 @@
     "@storybook/theming": "^7.6.17",
     "@storybook/vue3": "^7.6.17",
     "@storybook/vue3-webpack5": "^7.6.17",
-    "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/test-utils": "^2.4.4",
     "@vue/vue3-jest": "^29.2.6",
     "ajv": "^8.12.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^29.7.0",
-    "babel-loader": "^9.1.3",
-    "babel-plugin-dynamic-import-node": "^2.3.3",
+    "chromatic": "^9.1.0",
     "css-loader": "^6.10.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
