--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "NODE_ENV=production webpack --config ./webpack.config.js",
     "build:core": "NODE_ENV=production webpack --config ./components/webpack.config.js",
     "build:tools": "NODE_ENV=production webpack --config ./tools/webpack.config.js",
+    "vite-build:tools": "vite build --config ./tools/vite.config.js",
     "start": "NODE_ENV=development webpack serve --config ./webpack-dev.config.js",
     "start:https": "npm run start -- --server-type https",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --ignore-path .gitignore",
@@ -23,6 +24,7 @@
   "dependencies": {
     "@cloudblueconnect/material-svg": "^1.0.43",
     "mitt": "^3.0.1",
+    "vite": "^5.1.6",
     "vue": "^3.4.21"
   },
   "devDependencies": {
@@ -68,6 +70,7 @@
     "vue-style-loader": "^4.1.3",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.2"
+    "webpack-dev-server": "^5.0.2",
+    "@vitejs/plugin-vue": "^5.0.4"
   }
 }
