LITE-29837: Add input validation to Textfield and Select - Create useFieldValidation composable to validate input fields against rules - Implement validation in Textfield and Select components - Other Textfield fixes: fixed focused and label styles, added hint, fixed focus behavior - Other Select fixes: fixed focused styles, added customization to option rendering, add menuProps - Emit "opened" and "closed" when Menu widget is toggled - Add new stories for Textfield and select

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "stylus": "^0.63.0",
     "stylus-loader": "^8.1.0",
     "svgo-loader": "^4.0.0",
+    "validator": "^13.11.0",
     "vue-eslint-parser": "^9.4.2",
     "vue-loader": "^17.4.2",
     "vue-style-loader": "^4.1.3",
