--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
     "./tools/*": "./dist/tools/*"
   },
   "scripts": {
-    "build": "NODE_ENV=production webpack --config ./webpack.config.js",
-    "build:core": "NODE_ENV=production webpack --config ./components/webpack.config.js",
-    "build:tools": "NODE_ENV=production webpack --config ./tools/webpack.config.js",
-    "vite-build:tools": "vite build --config ./tools/vite.config.js",
-    "start": "NODE_ENV=development webpack serve --config ./webpack-dev.config.js",
-    "start:https": "npm run start -- --server-type https",
+    "build": "npm run vite-build:tools && npm run vite-build:core",
+    "build:core": "vite build --config ./components/vite.config.js",
+    "build:tools": "vite build --config ./tools/vite.config.js",
+    "start": "NODE_ENV=development npm run vite-build && vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --ignore-path .gitignore",
     "lint:fix": "npm run lint -- --fix",
     "format": "prettier --write . --ignore-path .gitignore",
@@ -39,7 +37,7 @@
     "@storybook/testing-library": "^0.2.2",
     "@storybook/theming": "^7.6.17",
     "@storybook/vue3": "^7.6.17",
-    "@storybook/vue3-webpack5": "^7.6.17",
+    "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/test-utils": "^2.4.4",
     "@vue/vue3-jest": "^29.2.6",
@@ -52,7 +50,6 @@
     "eslint-plugin-jest-formatting": "^3.1.0",
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-vue": "^9.22.0",
-    "eslint-webpack-plugin": "^4.0.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-transform-stub": "^2.0.0",
@@ -67,12 +64,10 @@
     "stylus-loader": "^8.1.0",
     "svgo-loader": "^4.0.0",
     "validator": "^13.11.0",
+    "vite-plugin-svgo": "^1.4.0",
     "vue-eslint-parser": "^9.4.2",
     "vue-loader": "^17.4.2",
     "vue-style-loader": "^4.1.3",
-    "webpack": "^5.90.3",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.2",
-    "@vitejs/plugin-vue": "^5.0.4"
+    "vite": "^5.1.6"
   }
 }
