--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "lint:fix": "npm run lint -- --fix",
     "format": "prettier --write . --ignore-path .gitignore",
     "format:check": "prettier --check . --ignore-path .gitignore",
-    "test": "jest --config ./jest.config.js",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage.enabled",
+    "test:watch": "vitest watch",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -40,19 +42,13 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/test-utils": "^2.4.4",
-    "@vue/vue3-jest": "^29.2.6",
     "ajv": "^8.12.0",
     "chromatic": "^9.1.0",
     "css-loader": "^6.10.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jest": "^27.9.0",
-    "eslint-plugin-jest-formatting": "^3.1.0",
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-vue": "^9.22.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-transform-stub": "^2.0.0",
     "prettier": "3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -68,6 +64,9 @@
     "vue-eslint-parser": "^9.4.2",
     "vue-loader": "^17.4.2",
     "vue-style-loader": "^4.1.3",
-    "vite": "^5.1.6"
+    "vite": "^5.1.6",
+    "vitest": "^1.4.0",
+    "eslint-plugin-vitest-globals": "^1.4.0",
+    "@vitest/coverage-v8": "^1.3.1"
   }
 }
