--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@cloudblueconnect/material-svg": "^1.0.43",
     "mitt": "^3.0.1",
+    "tinycolor2": "^1.6.0",
     "vue": "^3.4.21"
   },
   "devDependencies": {
