--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "./tools/*": "./dist/tools/*"
   },
   "scripts": {
-    "build": "npm run vite-build:tools && npm run vite-build:core",
+    "build": "npm run build:tools && npm run build:core",
     "build:core": "vite build --config ./components/vite.config.js",
     "build:tools": "vite build --config ./tools/vite.config.js",
-    "start": "NODE_ENV=development npm run vite-build && vite preview",
+    "start": "NODE_ENV=development npm run build && vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --ignore-path .gitignore",
     "lint:fix": "npm run lint -- --fix",
     "format": "prettier --write . --ignore-path .gitignore",
@@ -30,43 +30,34 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.7.2",
-    "@storybook/addon-actions": "^7.6.17",
-    "@storybook/addon-designs": "^7.0.9",
-    "@storybook/addon-essentials": "^7.6.17",
-    "@storybook/addon-interactions": "^7.6.17",
-    "@storybook/addon-links": "^7.6.17",
-    "@storybook/addons": "^7.6.17",
-    "@storybook/testing-library": "^0.2.2",
-    "@storybook/theming": "^7.6.17",
-    "@storybook/vue3": "^7.6.17",
+    "@storybook/addon-actions": "^8.0.9",
+    "@storybook/addon-designs": "^8.0.1",
+    "@storybook/addon-essentials": "^8.0.9",
+    "@storybook/addon-interactions": "^8.0.9",
+    "@storybook/addon-links": "^8.0.9",
+    "@storybook/manager-api": "^8.0.9",
+    "@storybook/theming": "^8.0.9",
+    "@storybook/vue3": "^8.0.9",
+    "@storybook/vue3-vite": "^8.0.9",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vitest/coverage-v8": "^1.3.1",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/test-utils": "^2.4.4",
     "ajv": "^8.12.0",
     "chromatic": "^9.1.0",
-    "css-loader": "^6.10.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-storybook": "^0.8.0",
+    "eslint-plugin-vitest-globals": "^1.5.0",
     "eslint-plugin-vue": "^9.22.0",
+    "jsdom": "^24.0.0",
     "prettier": "3.2.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "storybook": "^7.6.17",
-    "storybook-addon-vue-mdx": "^0.1.5",
-    "storybook-vue-addon": "^0.4.0",
-    "style-loader": "^3.3.4",
+    "storybook": "^8.0.9",
     "stylus": "^0.63.0",
-    "stylus-loader": "^8.1.0",
-    "svgo-loader": "^4.0.0",
     "validator": "^13.11.0",
-    "vite-plugin-svgo": "^1.4.0",
-    "vue-eslint-parser": "^9.4.2",
-    "vue-loader": "^17.4.2",
-    "vue-style-loader": "^4.1.3",
     "vite": "^5.1.6",
+    "vite-plugin-svgo": "^1.4.0",
     "vitest": "^1.4.0",
-    "eslint-plugin-vitest-globals": "^1.4.0",
-    "@vitest/coverage-v8": "^1.3.1"
+    "vue-eslint-parser": "^9.4.2"
   }
 }
