Update coverage repo

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=connect-ui-toolkit
 sonar.organization=cloudbluesonarcube
-sonar.javascript.lcov.reportPaths=test/coverage/lcov.info
+sonar.coverageReportPaths=test/coverage/clover.xml
 sonar.exclusions=**/**/*.spec.js,**/**/*.stories.js,**/**/*.config.js,*.config.js
