--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:coverage": "vitest run --coverage.enabled",
     "test:watch": "vitest watch",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "precommit": "npm run test && npm run lint:fix && npm run format && npm run build"
   },
   "dependencies": {
     "@cloudblueconnect/material-svg": "^1.0.43",
